# fulcrum-rust

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  docker-compose.yml  start-rest-api.sh
src/: address.rs  config.rs  electrum.rs  handlers.rs  lib.rs  main.rs  pool.rs
tests/: integration.rs
