[package]
name = "fulcrum-rust"
version = "0.1.0"
edition = "2021"
description = "REST API gateway for Fulcrum (Electrum Cash Protocol)"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitcoincash-addr = "0.5"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "normalize-path"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
